# stm32.rs

./: .travis.yml  Cargo.toml  README.md  upload-docs.sh
src/: afio.rs  interrupt.rs  lib.rs  peripheral.rs  rcc.rs  tim.rs
src/dma/: cndtr.rs  mod.rs
src/gpio/: crh.rs  crl.rs  mod.rs
src/usart/: dr.rs  mod.rs
